cluster/apps/it-tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  labels:
    app: it-tools

spec:
  ports:
    - port: 80
      name: web
      protocol: TCP
      targetPort: web
  selector:
    app: it-tools
