cluster/apps/it-tools/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  labels:
    app: it-tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: networking-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "tools"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - it.kblb.io
      secretName: my-certs-it-tools
  rules:
    - host: it.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  name: web
