cluster/apps/it-tools/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: it-tools-network-policy
spec:
  podSelector:
    matchLabels:
      app: it-tools
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 80
          protocol: TCP
  egress:
    - {}
